# AGM

./: .gitignore  .travis.yml  AGGL.aggl  AGGL.py  AGGLEditor.py  AGM.py  AGMEditor.py  AGMExecutiveClient.py  AGMModule.py  AGMWorldModel.h  CMakeLists.txt  Doxyfile.in  README.md  WorldModel.cpp  WorldModel.h  aggl2agglpy  aggl2agmbd  aggl2pddl  aggl_completion.bash  aggllexer.cpp  aggllexer.l  agglparser.cpp  agglparser.y  agglplanner.cpp  agm.cpp  agm.h  agm2pddl  agm_behavior.cpp  agm_behavior.h  agm_misc_functions.cpp  agm_misc_functions.h  agm_model.cpp  agm_model.h  agm_modelConverter.cpp  agm_modelConverter.h  agm_modelDrawer.h  agm_modelEdge.cpp  agm_modelEdge.h  agm_modelException.h  agm_modelPrinter.cpp  (+55 more)
AGGLPlanner/: Doxyfile  agglDebugHierarchicalRule.py  agglplan.py  agglplan2.py  agglplanchecker.py  agglplanner.py  agglplanner.thrift  agglplanner2.py  agglplanner2_utils.py  agglplanner3.py  agglplannerclient.py  agglplannerplan.py  agglplannerserver.py  agglplanningcache.py  dnnpredictor.py  dummysemanticspredictor.py  genericprediction.py  linearregressionpredictor.py  linearregressionpredictor2.py  linearregressionpredictor3.py  nopredictor.py  prueba.aggl  target.py
AGGLPlanner/example_HRI/: HRI.aggl  plan.sh
AGGLPlanner/example_HRI/clean/: plan.sh
AGGLPlanner/example_HRI/clean_table_easy/: active.aggl.py  target.py
AGGLPlanner/example_HRI/clean_table_hard/: active.aggl.py  active_modified.aggl.py  full.aggl.py  target.py
AGGLPlanner/example_HRI/clean_table_hard_combo/: HRI.aggl  active.aggl.py  full.aggl.py
Files/: AGMAgent.ice  AGMCommonBehavior.ice  AGMExecutive.ice  AGMWorldModel.ice
Learner/: AGMParser.py  classifier.py  const.py  generate.py  prb_distrb.prb  store.data  test.py  train.py  tutorial.md
Learner/API/: naiveBayesClassifier.py  naiveBayesInputValidator.py
RoboCompAGMExecutive/: CMakeLists.txt  Doxyfile  config  run  rund  sh  shd
RoboCompAGMExecutive/Slice/: AGMAgent.ice  AGMExecutive.ice  AGMWorldModel.ice
RoboCompAGMExecutive/src/: CMakeLists.txt  agmExecutiveComp.cpp  config.h  executiveI.h  worker.cpp  worker.h
RoboCompAGMMissionControllerExample/: CMakeLists.txt  config
RoboCompAGMMissionControllerExample/src/: CMakeLists.txt  config.h  executiveTopicI.h  executiveVisualizationTopicI.h  gualzru_visualizerComp.cpp  guiDlg.ui  worker.cpp  worker.h
doc/: Doxyfile  Doxyfile.in  DoxygenLayout.xml  customdoxygen.css  documentation.dox  footer.html  header.html  makedoc.sh  tabs.css
examples/: collazu.aggl  ddd  exampleInitialModel.xml  grammarGualzru.aggl  grammarGualzru.agm  grammarGualzruBig.agm  grammarGualzruVisual.agm  grammarSimple.agm  gualzruModelsMug.pddl  hola.agm  loki.aggl  modelA2.xml  runTests.sh  simple.agm
examples/HRI/coffee/: CMakeLists.txt  coffee.aggl  coffeePAPER.aggl  runTest.sh
examples/HRI/coffee/0_findMilk/: CMakeLists.txt  goal.xml  goal0.xml  goal1.xml  plan.plan  world.in.xml  world.xml
examples/HRI/coffee/1_experiment/: CMakeLists.txt  goal.xml  goal0.xml  world.in.xml  world.xml
examples/HRI/table/: table.aggl
examples/basic/: initialModel.xml
examples/egg/: general.aggl  grammar.aggl  grammar_no_hierarchy.aggl
examples/ejemplosMer/crearSimbolos/: crearFigurasGrammar.aggl  crearTrianguloGrammar.aggl  fullRules.py
examples/ejemplosMer/hacerCafe/: fullRules.py
examples/ejemplosMer/llenarVaso/: inicio.xml  objetivo.xml  objetivo1.py  objetivo2.py
examples/logistics/: ac  agglplan.lprof  domain1.aggl  domain1_quantifiers.aggl  domain1_quantifiers1.aggl  domain1_withCombo_quantifier.aggl  f  goal.py  goal.xml  goal0.xml  goal1.xml  goal2.xml  init.xml  init0.xml  init1.xml  init2.xml  output_file  restats
examples/logisticsTyped/: domain.aggl  init.xml
examples/makeMeCoffee/: domain.aggl  domain_basic.aggl  domain_hierarchical.aggl  runTests.sh
examples/unstable/: domain.aggl  hierarchical.aggl
fake/: CMakeLists.txt  runaftercompilation.sh
libagm/: aggllexer.l  agglparser.y  agm.cpp  agm.h  agm_config.h  agm_inner.cpp  agm_inner.h  agm_misc_functions.cpp  agm_misc_functions.h  agm_model.cpp  agm_model.h  agm_modelConverter.cpp  agm_modelConverter.h  agm_modelDrawer.cpp  agm_modelDrawer.h  agm_modelEdge.cpp  agm_modelEdge.h  agm_modelException.h  agm_modelPrinter.cpp  agm_modelPrinter.h  agm_modelSymbols.cpp  agm_modelSymbols.h  agm_plan.cpp  agm_plan.h  agm_rule.cpp  agm_rule.h  agm_search.cpp  agm_search.h  graphModelViewer.cpp  graphModelViewer.h  testagm.cpp
libagm/fake/: fake.cpp  runaftercompilation.sh
parser/: AGMParser.py  parseAGGL.py  script.py  tempParser.py  xmlModelParser.py
prueba/: grammar.pddl  perceiveFloor.pddl  perceiveFloorS.pddl  perceiveNotWall.pddl  plan.pddl  problem2-modificado.pddl
python/: AGGL.py  AGMModelConversion.py  AGMModule.py  generateAGGLPlannerCode.py  parseAGGL.py  parseQuantifiers.py  pddlAGGL.py  pyparsinglocal.py  xmlModelParser.py
tmp/: README.txt
tools/: AGGLEditor.py  aggl2agglpy  aggl2pddl  aggl_completion.bash  agm_xmlViewer.py  agm_xmlViewer3D.cpp
tools/AGMExecutive2_robocomp/: AGMExecutive_robocomp.py  config
tools/AGMExecutive_robocomp/: AGMExecutive_core.py  AGMExecutive_monitoring.py  AGMExecutive_robocomp.py  agglplanningcache.py  config  config.icebox  run_executive.sh  testError.py
tools/AGMExecutive_robocomp/AGMExecutive2_robocomp/: AGMExecutive_core.py
tools/RoboCompAGMExecutive/: CMakeLists.txt
tools/RoboCompAGMExecutive/src/: executiveI.h  worker.cpp
tools/agmagentsim/: CMakeLists.txt
tools/agmagentsim/etc/: config
tools/agmagentsim/src/: agmagentsim.py  agmagentsimUI.ui  specificworker.py
tools/agminner/src/: CMakeLists.txt  CMakeListsSpecific.txt  main.cpp  specificmonitor.cpp  specificworker.cpp  specificworker.h
tools/agminneragent/: agmInner.cdsl
tools/agminneragent/src/: CMakeLists.txt  CMakeListsSpecific.txt  genericworker.h  main.cpp  specificmonitor.cpp  specificworker.cpp  specificworker.h
tools/agmmission/: CMakeLists.txt  DoxyFile  README.md  agmmission.cdsl
tools/agmmission/etc/: config
tools/ui/: agglTypeEditor.ui  guiAGGLEditor.ui
(+136 files in other folders)
